src/test/ui/self/elision/lt-ref-self-async.stderr
error[E0623]: lifetime mismatch
  --> $DIR/lt-ref-self-async.rs:13:42
   |
LL |     async fn ref_self(&self, f: &u32) -> &u32 {
   |                       -----              ^^^^
   |                       |                  |
   |                       |                  ...but data from `f` is returned here
   |                       this parameter and the return type are declared with different lifetimes...

error[E0623]: lifetime mismatch
  --> $DIR/lt-ref-self-async.rs:19:48
   |
LL |     async fn ref_Self(self: &Self, f: &u32) -> &u32 {
   |                             -----              ^^^^
   |                             |                  |
   |                             |                  ...but data from `f` is returned here
   |                             this parameter and the return type are declared with different lifetimes...

error[E0623]: lifetime mismatch
  --> $DIR/lt-ref-self-async.rs:23:57
   |
LL |     async fn box_ref_Self(self: Box<&Self>, f: &u32) -> &u32 {
   |                                     -----               ^^^^
   |                                     |                   |
   |                                     |                   ...but data from `f` is returned here
   |                                     this parameter and the return type are declared with different lifetimes...

error[E0623]: lifetime mismatch
  --> $DIR/lt-ref-self-async.rs:27:57
   |
LL |     async fn pin_ref_Self(self: Pin<&Self>, f: &u32) -> &u32 {
   |                                     -----               ^^^^
   |                                     |                   |
   |                                     |                   ...but data from `f` is returned here
   |                                     this parameter and the return type are declared with different lifetimes...

error[E0623]: lifetime mismatch
  --> $DIR/lt-ref-self-async.rs:31:66
   |
LL |     async fn box_box_ref_Self(self: Box<Box<&Self>>, f: &u32) -> &u32 {
   |                                             -----                ^^^^
   |                                             |                    |
   |                                             |                    ...but data from `f` is returned here
   |                                             this parameter and the return type are declared with different lifetimes...

error[E0623]: lifetime mismatch
  --> $DIR/lt-ref-self-async.rs:35:62
   |
LL |     async fn box_pin_Self(self: Box<Pin<&Self>>, f: &u32) -> &u32 {
   |                                         -----                ^^^^
   |                                         |                    |
   |                                         |                    ...but data from `f` is returned here
   |                                         this parameter and the return type are declared with different lifetimes...

error: aborting due to 6 previous errors

